# atmosphere-sosp25-artifact

./: .editorconfig  .gitignore  Cargo.toml  README.md  flake.nix  get_line_count.sh  get_verification_time.sh  out.txt  parse_verification.py  run_fmt.sh  rust-toolchain.toml  time.json  time.txt  tmp.rs  tmp.txt
aelf/: Cargo.toml
aelf/src/: lib.rs
aloader/: Cargo.toml  README.md  build.rs
aloader/.cargo/: config
aloader/src/: acpi.rs  debugger.rs  elf.rs  iommu.rs  linker.ld  logging.rs  main.rs  paging.rs  verified.rs  x86_64-unknown-none.json
aloader/src/boot/: crt0.asm  hvm.rs  mod.rs  multiboot2.rs  multiboot_header.asm
aloader/src/console/: mod.rs
aloader/src/elf/: dynamic.rs  mod.rs
aloader/src/memory/: allocator.rs  map.rs  mod.rs  paging.rs  userspace.rs
build-tool/: Cargo.toml  README.md
build-tool/src/: error.rs  grub.rs  main.rs  project.rs
build-tool/src/command/: build.rs  gdb.rs  mod.rs  run.rs  verify.rs
build-tool/src/emulator/: gdb-helper.py  gdb.rs  mod.rs  output_filter.rs  qemu.rs
dom0/: Cargo.toml  build.rs
dom0/.cargo/: config
dom0/src/: benchmark_null_driver.rs  dom1.asm  dom1.rs  elf.rs  ixgbe_client.rs  main.rs  nvme_client.rs  pci.rs  ring_buffer.rs  slab_alloc.rs  smoltcp_device.rs  syscall_benchmark.rs  x86_64-unknown-aloader.json
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config  config.toml
kernel/src/: bridge.rs  cpu.rs  debugger.rs  iommu.rs  logging.rs  logo.txt  main.rs  ring_buffer.rs  thread.rs  utils.rs  x86_64-unknown-aloader.json
kernel/src/boot/: ap_start.asm  ap_start.rs  command_line.rs  mod.rs
kernel/src/console/: mod.rs
kernel/src/gdt/: mod.rs
kernel/src/interrupt/: idt.rs  ioapic.rs  lapic.rs  mod.rs  mps.rs
kernel/src/kernel/: mod.rs
kernel/src/scripts/: cap_test.rs  fail_test.rs  mod.rs
kernel/src/syscalls/: mod.rs
kernel/src/verified/: mem.rs  mod.rs  page.rs
kernel/verified/: Cargo.toml  array.rs  array_set.rs  array_vec.rs  bridge.rs  cpu.rs  define.rs  dummy_paging.rs  kernel.rs  kernel_old.rs  lib.rs  linked_list.rs  mars_array.rs  mars_staticlinkedlist.rs  mem.rs  page.rs  page_alloc.rs  page_alloc_old.rs  page_arena.rs  paging.rs  paging_dummy.rs  pcid_alloc.rs  proc.rs  proc_getters.rs  quota.rs  root_table.rs  sched.rs  seters.rs  setters.rs  tmp.rs  trap.rs  va_range.rs
kernel/verified/allocator/: mod.rs  page.rs  page_allocator_impl.rs  page_allocator_proof.rs  page_allocator_spec_impl.rs  page_allocator_util_t.rs
kernel/verified/exploration/: opt_registers.rs
kernel/verified/iommutable/: iommutable_array.rs  iommutable_impl.rs  iommutable_spec.rs  iommutable_util.rs  mod.rs
kernel/verified/kernel/: create_and_map_pages.rs  create_and_share_pages.rs  kernel_init.rs  kernel_mem_impl.rs  kernel_mem_impl_old.rs  kernel_proc_impl.rs  kernel_spec.rs  kernel_spec_old.rs  kernel_syscalls_impl.rs  kernel_syscalls_impl_old.rs  kernel_tcb_sched.rs  kernel_tcd_sched.rs  mem_util.rs  mod.rs  schedule_idle_cpu.rs  send_receive_pre_spec.rs  spec.rs  spec_util.rs  syscall_endpoint.rs  syscall_io_mmap.rs  syscall_mem.rs  syscall_mmap.rs  syscall_new_container.rs  syscall_new_endpoint.rs  syscall_new_proc.rs  syscall_new_proc_with_iommu.rs  syscall_new_thread.rs  syscall_new_thread_with_endpoint.rs  syscall_pci.rs  syscall_proc.rs  syscall_proc_old.rs  syscall_receive_empty.rs  syscall_receive_endpoint.rs  syscall_receive_pages.rs  syscall_resolve_va.rs  syscall_send_empty.rs  syscall_send_empty_try_schedule.rs  syscall_send_endpoint.rs  syscall_send_pages.rs  syscall_spec.rs  (+2 more)
kernel/verified/kernel/kernel_ipc_impl/: kernel_ipc_impl1.rs  kernel_ipc_impl2.rs  mod.rs
kernel/verified/kernel/kernel_mem_impl/: kernel_mem_impl_mod1.rs  kernel_mem_impl_mod2.rs  kernel_mem_impl_mod3.rs  kernel_mem_impl_mod4.rs  mod.rs
kernel/verified/kernel/syscall_ipc/: mod.rs  syscall_call_with_message.rs  syscall_receive.rs  syscall_receive_empty.rs  syscall_receive_endpoint.rs  syscall_receive_message.rs  syscall_receive_pages.rs  syscall_reply.rs  syscall_reply_and_receive.rs  syscall_reply_empty.rs  syscall_reply_message.rs  syscall_send.rs  syscall_send_empty.rs  syscall_send_empty_no_wait.rs  syscall_send_endpoint.rs  syscall_send_message.rs  syscall_send_pages.rs  syscall_send_pages_no_wait.rs
kernel/verified/kernel/syscall_proc/: mod.rs  syscall_new_proc.rs  syscall_new_proc_pass_mem.rs  syscall_new_proc_with_iommu.rs  syscall_new_proc_with_iommu_pass_mem.rs
kernel/verified/lemma/: lemma_t.rs  lemma_u.rs  mod.rs
kernel/verified/memory_manager/: mmu_init.rs  mmu_util.rs  mod.rs  pci_bitmap.rs  root_table.rs  spec_impl.rs
kernel/verified/mmu/: mmu_impl.rs  mmu_init.rs  mmu_spec.rs  mmu_util.rs  mod.rs  pci_bitmap.rs  root_table.rs
kernel/verified/page_alloc/: lemma.rs  mod.rs  page_alloc.rs  page_alloc_impl.rs  page_alloc_spec.rs  page_array.rs  spec.rs
kernel/verified/pagetable/: entry.rs  mod.rs  pagemap.rs  pagemap_util_t.rs  pagetable_array.rs  pagetable_impl.rs  pagetable_proof.rs  pagetable_spec.rs  pagetable_spec_impl.rs  pagetable_util.rs
kernel/verified/proc/: endpoint.rs  endpoint_util.rs  mod.rs  proc.rs  proc_impl.rs  proc_spec.rs  proc_util.rs  sched.rs  spec.rs  thread.rs  thread_util.rs
kernel/verified/process_manager/: container.rs  container_tree.rs  container_tree_spec_impl.rs  container_util_t.rs  cpu.rs  endpoint.rs  endpoint_util_t.rs  impl_new_container.rs  impl_new_proc.rs  impl_new_proc_with_iommu.rs  impl_new_thread.rs  mod.rs  proc_container.rs  proc_util_t.rs  process.rs  process_tree.rs  process_tree_spec_impl.rs  spec_impl.rs  spec_proof.rs  thread.rs  thread_util_t.rs
kernel/verified/slinkedlist/: impl_t.rs  mod.rs  node.rs  spec_impl_u.rs
kernel/verified/user_level_isolation/: mod.rs  statemachine.rs
kernel/verified/util/: mod.rs  page_ptr_util_t.rs  page_ptr_util_u.rs
nvme_driver/: Cargo.toml
nvme_driver/src/: cmd.rs  device.rs  lib.rs  nvme_test.rs  queue.rs  regs.rs
redhttpd/: Cargo.toml
redhttpd/src/: lib.rs
ring_buffer/: Cargo.toml
ring_buffer/src/: lib.rs
user/maglev/: Cargo.toml
user/maglev/src/: maglev.rs  main.rs
(+67 files in other folders)
