[workspace]
resolver = "2"
members = [
  "aloader",
  "astd",
  "atest",
  "build-tool",
  "dom0",
  "kernel-logger",
  "ns16550a",
  "kernel",
  "kernel/verified",

  #"test-cargo-driver",
  #"atcp",
  #"build-tool",
  #"kernel",
  #"libcap",
  #"portman",
  #"verified",
]

exclude = ["test-pass"]
