[workspace]
resolver = "2"
members = [
  "aelf",
  "aloader",
  "astd",
  "asys",
  "atest",
  "build-tool",
  "dom0",
  "kernel-logger",
  "ns16550a",
  "kernel",
  "kernel/verified",
  "ring_buffer",

  #"test-cargo-driver",
  #"atcp",
  #"build-tool",
  #"kernel",
  #"libcap",
  #"portman",
  #"verified",
]

exclude = ["test-pass"]

[profile.release]
debug = true
