[package]
name = "build-tool"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "atmo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.68"
byte-unit = "4.0.19"
cargo = "0.70.0"
cargo_metadata = "0.17.0"
#cargo = { git = "https://github.com/rust-lang/cargo", rev = "c91a693e7" }
clap = { version = "4.3.5", features = ["derive"] }
clap_complete = "4.3.1"
env_logger = "0.10.0"
exec = "0.3.1"
futures = "0.3.28"
home = "0.5.5"
log = { version = "0.4.19", features = [] }
quit = "2.0.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
stack-sizes = "0.5.0"
tempfile = "3.6.0"
tokio = { version = "1.28.2", features = ["full"] }
