[package]
name = "dom0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asys = { path = "../asys" }
libtime = { path = "../user/libtime" }
slabmalloc = "0.11.0"
spin = "0.9.8"
log = "0.4.19"
x86 = "0.52.0"
pcid = { path = "../pcid" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
nvme_driver = { path = "../nvme_driver" }
