[package]
name = "dom0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astd = { path = "../astd" }
aelf = { path = "../aelf" }
asys = { path = "../asys" }

pcid = { path = "../pcid" }
nvme_driver = { path = "../nvme_driver" }
ring_buffer = { path = "../ring_buffer" }
ixgbe_driver = { path = "../ixgbe_driver" }
redhttpd = { path = "../redhttpd" }

libtime = { path = "../user/libtime" }
constants = { path = "../constants" }

slabmalloc = "0.11.0"
spin = "0.9.8"
log = "0.4.19"
x86 = "0.52.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[dependencies.smoltcp]
version = "0.11.0"
default-features = false
features = ["log", "medium-ethernet", "proto-ipv4", "proto-dns", "socket-tcp", "socket-icmp"]

[build-dependencies]
nasm-rs = "0.3.0"
