[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"
publish = false

[dependencies]
astd = { path = "../astd" }
asys = { path = "../asys" }
atest = { path = "../atest" }
ns16550a = { path = "../ns16550a" }
kernel-logger = { path = "../kernel-logger" }

bitfield = "0.13.2"  # Totally non-confusing crate name
bit_field = "0.10.1"
displaydoc = { version = "0.2.3", default-features = false }
enum-primitive-derive = "0.2.2"
log = "0.4.14"
num = { version = "0.4", default-features = false }
num-derive = "0.3.3"
num-traits = { version = "0.2.14", default-features = false }
realjump = "0.2.0"
x86 = "0.47.0"
byteorder = { version = "1.5.0", default-features = false }
bitflags = "2.4.2"
memoffset = { version = "0.9.0", features = ["unstable_const", "unstable_offset_of"] }

[dependencies.verified]
path = "verified"

[build-dependencies]
nasm-rs = "0.2.4"

[dependencies.vstd]
git = "https://github.com/mars-research/verus"
branch = "mars"
default-features = false
