[package]
name = "verified"
version = "0.1.0"
edition = "2021"

[package.metadata.atmosphere]
verified = true

[lib]
name = "verified"
path = "lib.rs"

[dependencies]
log = "0.4.21"

[dependencies.vstd]
git = "https://github.com/mars-research/verus"
branch = "mars"
default-features = false

# Cannot have any other dependencies

[features]
std = []
