[package]
name = "maglev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astd = { path = "../../astd" }
asys = { path = "../../asys" }
log = "0.4.19"
ring_buffer = { path = "../../ring_buffer" }

libtime = { path = "../../user/libtime" }

slabmalloc = "0.11.0"
spin = "0.9.8"
x86 = "0.52.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }